--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,16 +1,16 @@
 version: 2.1
 
 orbs:
-  node: circleci/node@5.0.2
+  # node: circleci/node@5.0.2
   docker: circleci/docker@2.1.4
 
 workflows:
-  testing_this_stuff:
-    jobs:
-      - node/test:
-          version: '18.9.1'
-          # If you are using yarn, change the line below from "npm" to "yarn"
-          pkg-manager: npm
+  # testing_this_stuff:
+  #   jobs:
+  #     - node/test:
+  #         version: '18.9.1'
+  #         # If you are using yarn, change the line below from "npm" to "yarn"
+  #         pkg-manager: npm
   docker_testing:
     jobs:
       - build:
