--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,7 +8,7 @@ jobs:
   just-build:
     executor: docker/docker
     steps:
-      - setup_remote_docker
+      # - setup_remote_docker
       - checkout
       - docker/check
       - docker/build:
