--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,9 +8,9 @@ jobs:
   just-build:
     executor: docker/docker
     steps:
-      # - setup_remote_docker
+      - setup_remote_docker
       - checkout
-      - docker/check
+      # - docker/check
       - docker/build:
           image: machariavck/ci-testing
       - run: node --version
