--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,7 +10,7 @@ jobs:
     steps:
       - setup_remote_docker
       - checkout
-      # - docker/check
+      - docker/check
       - docker/build:
           image: machariavck/ci-testing
       - run:
