--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,8 +15,7 @@ jobs:
       - run:
           name: Logging in to docker..
           command: |
-            echo $DOCKER_PASSWORD | docker login --username $DOCKER_LOGIN --password-stdin && /
-            echo "successfully logged in"
+            echo $DOCKER_PASSWORD | docker login --username $DOCKER_LOGIN --password-stdin
       - run:
           name: What's my docker creds?
           command: echo username:$DOCKER_LOGIN && echo password:$DOCKER_PASSWORD
