--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,14 +11,14 @@ jobs:
       - setup_remote_docker
       - checkout
       - docker/build:
-          image: $DOCKER_LOGIN/ci-testing
+          image: $D_USER/ci-testing
+      - run:
+          name: What's my docker creds?
+          command: echo username:$D_USER && echo password:$D_PASS
       - run:
           name: Logging in to docker..
           command: |
-            echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_LOGIN" --password-stdin
-      - run:
-          name: What's my docker creds?
-          command: echo username:$DOCKER_LOGIN && echo password:$DOCKER_PASSWORD
+            echo $D_PASS | docker login --username $D_USER --password-stdin
       - docker/check
 
 workflows:
