--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,8 +15,7 @@ jobs:
           docker-password: D_PASS
       - docker/build:
           image: $D_USER/ci-testing
-          extra_build_args:
-            build-arg: "FOOD=$FOOD"
+          extra_build_args: --build-arg FOOD=$FOOD
       - run:
           name: What's my docker creds?
           command: echo username:$D_USER && echo password:$D_PASS
